--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "TikTok Peter Focus",
+    "name": "Peter Focus",
     "version": "1.0",
     "description": "Focus with Peter.",
     "icons": {
